Change default GC to G1
Patch by Al Tobey; reviewed by jmckenzie for CASSANDRA-7486